--- a/uProcessor.qsf
+++ b/uProcessor.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE AUTO
-set_global_assignment -name TOP_LEVEL_ENTITY uProcessor
+set_global_assignment -name TOP_LEVEL_ENTITY multiplier
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:10:44  MAY 29, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Lite Edition"
@@ -61,7 +61,10 @@ set_global_assignment -name VHDL_FILE FSM.vhd
 set_global_assignment -name VHDL_FILE FA.vhd
 set_global_assignment -name VHDL_FILE Decoder.vhd
 set_global_assignment -name VHDL_FILE Acumulator.vhd
+set_global_assignment -name VHDL_FILE multiplier.vhd
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform2.vwf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform3.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
